--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "ecommerce"
   ],
   "author": "Suraj Chapagain",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
