npm run command added

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An ecommerce website ",
   "main": "index.js",
   "scripts": {
+    "serve:local": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
