--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19"
   }
 }
