--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve:local": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/*.js --exit",
     "lint": "eslint ./*.js",
     "lint:fix": "eslint --fix ./* .js"
   },
