--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
   },
   "devDependencies": {
     "chai": "^4.3.6",
