--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Suraj Chapagain",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
