--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
